[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-api"
version = "0.1.0"
description = "API сервис с PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Иван Иванов", email = "ivan@example.com" }
]
license = "MIT"
keywords = ["api", "fastapi", "postgresql"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "requests>=2.34.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",          # для тестов API
  "pytest-asyncio>=0.23.0", # для асинхронных тестов
  "black>=24.8.0",
  "ruff>=0.9.0",            # линтер + форматтер
  "mypy>=1.12.0",
]
docs = [
  "mkdocs>=2.0.0",
  "mkdocstrings[python]>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/you/my-api"
Repository = "https://github.com/you/my-api.git"
Issues = "https://github.com/you/my-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true